{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 11,
  "lineage": "4b2dc289-2a51-a824-1dee-322f4fe032c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ttt_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:528011504528:instance/i-0014172dfd86d9714",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0014172dfd86d9714",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064c443048c566bcd",
            "private_dns": "ip-10-0-1-130.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "public_dns": "ec2-54-209-255-110.compute-1.amazonaws.com",
            "public_ip": "54.209.255.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c4f43a3009e55495",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5a85ed8082eb79c",
            "tags": {
              "Name": "TicTacToeInst"
            },
            "tags_all": {
              "Name": "TicTacToeInst"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-055990f9d9b67a76c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_subnet.ttt_sub",
            "aws_vpc.ttt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528011504528:internet-gateway/igw-041dadb93ac1948ab",
            "id": "igw-041dadb93ac1948ab",
            "owner_id": "528011504528",
            "tags": {
              "Name": "TicTacToeGateway"
            },
            "tags_all": {
              "Name": "TicTacToeGateway"
            },
            "vpc_id": "vpc-0efa8989e584bb6ae"
          },
          "dependencies": [
            "aws_vpc.ttt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tictactoe_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528011504528:route-table/rtb-0c0fde6c6f2ca95e0",
            "id": "rtb-0c0fde6c6f2ca95e0",
            "owner_id": "528011504528",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-041dadb93ac1948ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TicTacToeRouteTable"
            },
            "tags_all": {
              "Name": "TicTacToeRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efa8989e584bb6ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.ttt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0845631da4b23806a",
            "route_table_id": "rtb-0c0fde6c6f2ca95e0",
            "subnet_id": "subnet-0e5a85ed8082eb79c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.tictactoe_rt",
            "aws_subnet.ttt_sub",
            "aws_vpc.ttt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528011504528:security-group/sg-055990f9d9b67a76c",
            "description": "Allow SSH and HTTP inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-055990f9d9b67a76c",
            "ingress": [],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "528011504528",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-http"
            },
            "tags_all": {
              "Name": "allow-ssh-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efa8989e584bb6ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ttt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ttt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528011504528:subnet/subnet-0e5a85ed8082eb79c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5a85ed8082eb79c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528011504528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "TicTacToeSubnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "TicTacToeSubnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0efa8989e584bb6ae"
          },
          "dependencies": [
            "aws_vpc.ttt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ttt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528011504528:vpc/vpc-0efa8989e584bb6ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0309892bde8997de4",
            "default_route_table_id": "rtb-0178d88b6389ae04b",
            "default_security_group_id": "sg-085a96a0e4349d593",
            "dhcp_options_id": "dopt-06ee375b06a25d9dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efa8989e584bb6ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0178d88b6389ae04b",
            "owner_id": "528011504528",
            "tags": {
              "Name": "TicTacToeVPC"
            },
            "tags_all": {
              "Name": "TicTacToeVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528011504528:security-group-rule/sgr-0e735041a6b27d54b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e735041a6b27d54b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-055990f9d9b67a76c",
            "security_group_rule_id": "sgr-0e735041a6b27d54b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_vpc.ttt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528011504528:security-group-rule/sgr-0ea1ed2d3b064ffd0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0ea1ed2d3b064ffd0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-055990f9d9b67a76c",
            "security_group_rule_id": "sgr-0ea1ed2d3b064ffd0",
            "tags": null,
            "tags_all": {},
            "to_port": 8081
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_vpc.ttt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528011504528:security-group-rule/sgr-051e311568459e59c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-051e311568459e59c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-055990f9d9b67a76c",
            "security_group_rule_id": "sgr-051e311568459e59c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_vpc.ttt_vpc"
          ]
        }
      ]
    }
  ]
}